# unidisc

./: .gitignore  .gitmodules  Dockerfile  README.md  __builtins__.pyi  constants.py  data_defs.py  dataloader.py  decoupled_utils.py  main.py  model.py  model_eval.py  model_setup.py  model_utils.py  pyproject.toml  utils.py
configs/: config.yaml  config_empty.yaml
configs/experiments/: ar.yaml  elm.yaml  eval_model.yaml  eval_text.yaml  eval_text_only.yaml  eval_unified.yaml  fid_cc12m.yaml  fid_datacomp1b.yaml  fid_hf.yaml  jan_cub.yaml  large_maskdit_exp.yaml  large_scale_high_res_interleaved_inference.yaml  large_scale_train.yaml  large_scale_train_high_res.yaml  large_scale_train_high_res_inference.yaml  large_scale_train_high_res_interleaved.yaml  maskgit.yaml  master_eval.yaml  mscoco_fid.yaml  paired_standalone_fid_eval.yaml  small_scale_train.yaml  small_scale_train_caching.yaml  small_text_only.yaml  standalone_fid_eval.yaml  titok.yaml  titok_sl256.yaml  txt_only.yaml  unified.yaml  vq16.yaml  vq16_1024.yaml  vq16_magvit.yaml  vq16_t2i.yaml  webdataset.yaml  zero_shot_eval.yaml
configs/lr_scheduler/: constant_warmup_cosine_decay.yaml  cosine_with_hard_restarts_schedule_with_warmup.yaml
configs/model/: extra_large.yaml  large.yaml  medium.yaml  small.yaml  xs.yaml  xxl.yaml
demo/: README.md  api_data_defs.py  client.py  demo.sh  inference.py  inference_utils.py  server.py
demo/misc/: client_simple_gradio.py  client_simple_streamlit.py
demo/scoring/: README.md  analyze_rewards.py  call_model.py  generate_input.py  generate_rewards.py
docs/: DATA.md  EVAL.md  INSTALL.md  TOKENIZERS.md  TRAIN.md
docs/reqs/: requirements.txt  requirements_eval.txt  requirements_forked.txt
models/: autoregressive_orig.py  dit.py  dit_orig.py  elm_custom.py  ema.py  noise_schedule.py  standalone_rotary.py
models/datasets/: combine_token_dicts.py  cub200.py  image_datasets.py  misc_image_datasets.py  precompute_text_tokens.py  precompute_tokens.py  text_datasets.py  webdataset_utils.py
scripts/: precompute_tokens_slurm.sh  small_scale_eval.sh  train_large_scale_slurm.sh
unidisc/datasets/: README.md  sampler.py
unidisc/datasets/preprocessing/: webdataset.md
unidisc/datasets/preprocessing/cambrian/: README.md
unidisc/datasets/preprocessing/capsfusion/: README.md
unidisc/datasets/preprocessing/cc12m/: README.md
unidisc/datasets/preprocessing/datacomp_1b/: README.md  split_parquet.py
unidisc/datasets/preprocessing/journeydb/: README.md  create_wds.py
unidisc/tokenizers/: chameleon_tokenizers.py  conversation.py  hpsv2_img_score.py  image_tokenizers.py  laion_aesthetic_v2.py  text_reward_model.py  text_tokenizers.py  tokenize_interleaved.py  viz_tokenizers.py
unidisc/utils/: cuda_utils.py  logging_utils.py  parallel_loader.py  simple_llm.py  slurm_requeue.py  standalone_metrics.py  tensor_utils.py  throughput_monitor.py  trainer_utils.py  viz_utils.py  xla_utils.py
(+17 files in other folders)
